<resources>
    <string name="app_name">SHTW</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">加载中……</string>
    <string name="transition_dialog">transition_dialog</string>
    <string name="press_again_exit">再按一次退出</string>

    <!--登陆模块-->
    <string name="system_name">拌合站与试验室信息管理系统</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login_company">By：上海同望信息技术有限公司</string>
    <string name="login_copyright">Copyright 2015-2016</string>
    <string name="upload">登陆</string>
    <string name="error">用户名或密码错误</string>

    <!--主页MainActivity模块-->
    <string name="laboratory">试验室</string>
    <string name="concrete">混凝土</string>
    <string name="banhezhan">拌合站</string>
    <string name="asphalt">沥青</string>
    <string name="alarm_level">报警等级</string>
    <string name="zongpanshu">总盘数:</string>
    <string name="zongfangliang">总方量:</string>
    <string name="overproof_count">超标盘数</string>
    <string name="overproof_rate">超标率</string>
    <string name="handle_count">处置盘数</string>
    <string name="handle_rate">处置率</string>
    <string name="elementary_ranking">初级</string>
    <string name="middle_ranking">中级</string>
    <string name="high_ranking">高级</string>

    <!--选择查询对话框模块-->
    <string name="select_start_time">开始时间</string>
    <string name="select_end_time">结束时间</string>
    <string name="select_equipment">选择设备</string>
    <string name="select_test_type">选择类型</string>

    <!--主页LaboratoryActivity模块-->
    <string name="yaliji">压力机</string>
    <string name="wannengji">万能机</string>
    <string name="statistic">统计分析</string>
    <string name="disqualification">不合格</string>
    <string name="detail">详情</string>

    <!--主页ConcreteActivity模块-->
    <string name="produce_query">生产查询</string>
    <string name="overproof">超标处置</string>
    <string name="material_statistic">材料核算</string>
    <string name="deviation">误差(kg)</string>
    <string name="deviation_rate">误差率(%)</string>
    <string name="matching">配比(kg)</string>
    <string name="reality">实际(kg)</string>
    <string name="material_name">材料名称</string>

    <!--版本更新模块-->
    <string name="check_update">检测更新</string>
    <string name="update">更新</string>

    <!--详情页模块-->
    <string name="handle_person">处置人</string>
    <string name="handle_time">处置时间</string>
    <string name="handle_reason">处置原因</string>
    <string name="handle_way">处置方式</string>
    <string name="handle_result">处置结果</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="abandon">放弃</string>

</resources>
