<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_material_statistic_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextAppearance="@style/ToolbarTextAppearance" />
        </android.support.design.widget.AppBarLayout>


        <in.srain.cube.views.ptr.PtrFrameLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ptr_material_statistic_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightest_gray"
            cube_ptr:ptr_duration_to_close="200"
            cube_ptr:ptr_duration_to_close_header="1000"
            cube_ptr:ptr_keep_header_when_refresh="true"
            cube_ptr:ptr_pull_to_fresh="false"
            cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
            cube_ptr:ptr_resistance="1.7">

            <com.shtoone.shtw.ui.PageStateLayout
                android:id="@+id/psl_material_statistic_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:emptyView="@layout/page_state_empty_view"
                app:errorView="@layout/page_state_error_view"
                app:loadingView="@layout/page_state_loading_view"
                app:netErrorView="@layout/page_state_net_error_view">

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/nsv_material_statistic_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="3dp"
                            android:background="?android:attr/selectableItemBackground"
                            card_view:cardCornerRadius="@dimen/card_Corner_Radius">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textview0"
                                    style="@style/DetailTextTheme"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="实际用量图(单位:kg)" />

                                <com.github.mikephil.charting.charts.BarChart
                                    android:id="@+id/barchart0_material_statistic_fragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="300dp" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="10dp"
                            android:background="?android:attr/selectableItemBackground"
                            card_view:cardCornerRadius="@dimen/card_Corner_Radius">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textview1"
                                    style="@style/DetailTextTheme"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="材料配比图(单位:kg)" />

                                <com.github.mikephil.charting.charts.BarChart
                                    android:id="@+id/barchart1_material_statistic_fragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="300dp" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="130dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="10dp"
                            card_view:cardCornerRadius="@dimen/card_Corner_Radius">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:padding="3dp">

                                <TextView
                                    style="@style/DetailTextTheme"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="核算表" />

                                <!-- 表头部分 -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/material_name" />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/reality" />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/matching" />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/deviation" />
                                </LinearLayout>

                                <android.support.v7.widget.RecyclerView
                                    android:id="@+id/rv_material_statistic_fragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </com.shtoone.shtw.ui.PageStateLayout>
        </in.srain.cube.views.ptr.PtrFrameLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_material_statistic_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_search_white_18dp"
        android:transitionName="@string/transition_dialog" />
</android.support.design.widget.CoordinatorLayout>


